--- a/Catalogue.html
+++ b/Catalogue.html
@@ -1,5 +1,6 @@
 <html>
 <body>
-<a href="catalogue_page.html" target="rightframe">Catalogue</a>
+<a href="Catalogue_page.html" target="rightframe">Catalogue</a>
 </body>
 </html>
+
