--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Beauty Website</title>
+    <title>Beauty Website</title>
 </head>
 
-<!-- Divide Page into 3 Rows -->
 <frameset rows="20%,10%,70%" border="1">
-
-    <!-- ROW 1 : Logo (left) + Header (right) -->
     <frameset cols="20%,80%">
         <frame src="logo.html">
         <frame src="header.html">
     </frameset>
 
-    <!-- ROW 2 : Menu Links -->
     <frameset cols="20%,20%,20%,20%,20%">
-        <frame src="home.html">
-        <frame src="login.html">
-        <frame src="register.html">
-        <frame src="catalogue.html">
-        <frame src="cart.html">
+        <frame src="home.html" name="top1">
+        <frame src="login.html" name="top2">
+        <frame src="register.html" name="top3">
+        <frame src="catalogue.html" name="top4">
+        <frame src="cart.html" name="top5">
     </frameset>
 
-    <!-- ROW 3 : Services (left) + Content display (right) -->
     <frameset cols="20%,80%">
         <frame src="services.html">
         <frame src="description.html" name="rightframe">
     </frameset>
-
 </frameset>
 
 </html>
