--- a/home.html
+++ b/home.html
@@ -1,5 +1,9 @@
 <html>
+<head>
+    <title>Home Page</title>
+</head>
 <body>
-<a href="home_page.html" target="rightframe">Home</a>
+    <h1>Welcome to My Website</h1>
+    <p>This is the home page.</p>
 </body>
 </html>
