--- a/home_page.html
+++ b/home_page.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<h2>Home Page</h2>
-<p>Welcome to our Beauty and Glow website.</p>
+<h2>Welcome to Beauty & Glow Website</h2>
+<p>This is the home page content.</p>
 </body>
 </html>
