--- a/home_page.html
+++ b/home_page.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<h2>Welcome to Beauty & Glow Website</h2>
-<p>This is the home page content.</p>
+<p></p>Welcome to Beauty & Glow Website
+This is the home page content.</p>
 </body>
+
 </html>
