--- a/home.html
+++ b/home.html
@@ -1,9 +1,5 @@
-<html>
-<head>
-    <title>Home Page</title>
-</head>
-<body>
-    <h1>Welcome to My Website</h1>
-    <p>This is the home page.</p>
-</body>
+<html> 
+<body> 
+<a href="home_page.html" target="rightframe">Home</a> 
+</body> 
 </html>
