--- a/home_page.html
+++ b/home_page.html
@@ -1,7 +1,6 @@
-<html>
-<body>
-<p></p>Welcome to Beauty & Glow Website
-This is the home page content.</p>
-</body>
-
+<html> 
+<body> 
+<h2>Home Page</h2> 
+<p>Welcome to our Beauty and Glow website.</p> 
+</body> 
 </html>
